package pizzas;

public class InnopolisPizza extends Pizza {
    public InnopolisPizza() {
        this.name = "Pizza from Innopolis with love!";
        this.toppings.add("Red pepper");
        this.toppings.add("Green pepper");
        this.toppings.add("Bolognese");
    }
}
