@startuml

title __PIZZAS's Class Diagram__\n

  namespace pizzas {
    class pizzas.FourCheesesPizza {
        + FourCheesesPizza()
    }
  }
  

  namespace pizzas {
    class pizzas.HawaiiPizza {
        + HawaiiPizza()
    }
  }
  

  namespace pizzas {
    class pizzas.InnopolisPizza {
        + InnopolisPizza()
    }
  }
  

  namespace pizzas {
    abstract class pizzas.Pizza {
        ~ dough : String
        ~ name : String
        ~ sauce : String
        ~ toppings : ArrayList<String>
        + cook()
        + cut()
        + getName()
        + prepare()
        + wrap()
    }
  }
  

  namespace pizzas {
    abstract class pizzas.Pizzeria {
        + orderPizza()
        {abstract} ~ createPizza()
    }
  }
  

  namespace pizzas {
    class pizzas.PizzeriaJimmy {
        + createPizza()
    }
  }
  

  namespace pizzas {
    class pizzas.PizzeriaRobby {
        + createPizza()
    }
  }
  

  pizzas.FourCheesesPizza -up-|> pizzas.Pizza
  pizzas.HawaiiPizza -up-|> pizzas.Pizza
  pizzas.InnopolisPizza -up-|> pizzas.Pizza
  pizzas.PizzeriaJimmy -up-|> pizzas.Pizzeria
  pizzas.PizzeriaRobby -up-|> pizzas.Pizzeria


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
